--- a/TheMovieManager/Base.lproj/Main.storyboard
+++ b/TheMovieManager/Base.lproj/Main.storyboard
@@ -38,21 +38,25 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <webView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="t9i-xb-ieq">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            </webView>
+                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BqU-ge-WXR">
+                                <rect key="frame" x="16" y="20" width="343" height="647"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <wkWebViewConfiguration key="configuration">
+                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                    <wkPreferences key="preferences"/>
+                                </wkWebViewConfiguration>
+                            </wkWebView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="t9i-xb-ieq" firstAttribute="top" secondItem="nQA-q2-QHt" secondAttribute="top" id="1se-bx-p7d"/>
-                            <constraint firstAttribute="trailing" secondItem="t9i-xb-ieq" secondAttribute="trailing" id="6bl-XL-24h"/>
-                            <constraint firstItem="t9i-xb-ieq" firstAttribute="leading" secondItem="nQA-q2-QHt" secondAttribute="leading" id="MPS-J6-bWd"/>
-                            <constraint firstItem="t9i-xb-ieq" firstAttribute="bottom" secondItem="kux-EN-rnt" secondAttribute="top" id="k5P-U6-Rh2"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="BqU-ge-WXR" secondAttribute="trailing" id="IxQ-1C-ACa"/>
+                            <constraint firstItem="kux-EN-rnt" firstAttribute="top" secondItem="BqU-ge-WXR" secondAttribute="bottom" id="NX3-vO-8DZ"/>
+                            <constraint firstItem="BqU-ge-WXR" firstAttribute="top" secondItem="UZw-Z9-T03" secondAttribute="bottom" id="jt3-4P-ktJ"/>
+                            <constraint firstItem="BqU-ge-WXR" firstAttribute="leading" secondItem="nQA-q2-QHt" secondAttribute="leadingMargin" id="sWG-sp-K2z"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="webView" destination="t9i-xb-ieq" id="gYI-it-Aij"/>
+                        <outlet property="webView" destination="BqU-ge-WXR" id="G5n-cn-2MR"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1YL-Bg-nbJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
